@@ -4,23 +4,31 @@ import java.math.BigDecimal;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import com.project.catalogservice.application.ports.input.GetProductById;
-import com.project.catalogservice.application.ports.input.GetProductsByNameAndDescription;
-import com.project.catalogservice.infrastruct.input.response.PaginatedResponse;
-import com.project.catalogservice.infrastruct.input.response.ProductResponse;
+import com.project.catalogservice.product.application.output.CreateProductOutput;
+import com.project.catalogservice.product.application.output.GetProductOutput;
+import com.project.catalogservice.product.application.ports.input.GetProductById;
+import com.project.catalogservice.product.application.ports.input.GetProductsByNameAndDescription;
+import com.project.catalogservice.product.common.output.PaginatedResponse;
+import com.project.catalogservice.product.domain.ProductId;
+import com.project.catalogservice.product.infrastruct.input.input.mapper.ProductControllerMapper;
+import com.project.catalogservice.product.infrastruct.input.input.request.UpdateProductRequest;
+import com.project.catalogservice.product.infrastruct.input.input.response.CreateProductResponse;
+import com.project.catalogservice.product.infrastruct.input.input.response.GetProductResponse;
+import com.project.catalogservice.product.infrastruct.input.input.response.UpdateProductResponse;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
-import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
@@ -29,10 +37,9 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
-import com.project.catalogservice.application.ports.input.CreateProduct;
-import com.project.catalogservice.domain.Product;
-import com.project.catalogservice.infrastruct.input.ProductController;
-import com.project.catalogservice.infrastruct.input.request.ProductRequest;
+import com.project.catalogservice.product.application.ports.input.CreateProduct;
+import com.project.catalogservice.product.infrastruct.input.input.ProductController;
+import com.project.catalogservice.product.infrastruct.input.input.request.CreateProductRequest;
 
 @WebMvcTest(ProductController.class)
 public class ProductControllerTest {
@@ -52,24 +59,34 @@ public class ProductControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
 
-    ProductRequest request;
+    CreateProductRequest createRequest;
 
-    Product product;
+    CreateProductResponse createResponse;
 
-    ProductResponse response;
+    CreateProductOutput createProductOutput;
+
+    UpdateProductRequest updateRequest;
+
+    UpdateProductResponse updateResponse;
+
+    GetProductOutput getProductOutput;
+
+    GetProductResponse getResponse;
 
     @BeforeEach
     public void setup() {
-        request = new ProductRequest(null,"Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS");
-        product = Product.fromEntity( 1L,"Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS", "AVAILABLE", LocalDate.now());
-        response = new ProductResponse(1L,"Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS", "AVAILABLE", LocalDate.now());
+        createRequest = new CreateProductRequest("Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS");
+        createProductOutput = new CreateProductOutput(ProductId.generate().getValue(), "Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS", "AVAILABLE", LocalDate.now());
+        createResponse = ProductControllerMapper.toResponse(createProductOutput);
+        getProductOutput = new GetProductOutput(ProductId.generate().getValue(),"Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS", "AVAILABLE", LocalDate.now());
+        getResponse = ProductControllerMapper.toResponse(getProductOutput);
     }
     
     @Test
     public void shouldCreateProductAndReturnSuccess() throws Exception {
         // Arrange
-        String request = objectMapper.writeValueAsString(new ProductRequest(1L, "Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS"));
-        when(createProduct.execute(any())).thenReturn(response);
+        String request = objectMapper.writeValueAsString(new CreateProductRequest( "Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS"));
+        when(createProduct.execute(any())).thenReturn(createProductOutput);
 
         // Act and Assert
         mockMvc.perform(MockMvcRequestBuilders.post("/product/create")
@@ -78,11 +95,11 @@ public class ProductControllerTest {
                 .characterEncoding(StandardCharsets.UTF_8)
                 .content(request))
         .andExpect(status().isCreated())
-        .andExpect(jsonPath("$.id").value(response.id()))
-        .andExpect(jsonPath("$.name").value(response.name()))
-        .andExpect(jsonPath("$.price").value(response.price()))
-        .andExpect(jsonPath("$.description").value(response.description()))
-        .andExpect(jsonPath("$.category").value(response.category()));
+        .andExpect(jsonPath("$.id").value(createResponse.id()))
+        .andExpect(jsonPath("$.name").value(createResponse.name()))
+        .andExpect(jsonPath("$.price").value(createResponse.price()))
+        .andExpect(jsonPath("$.description").value(createResponse.description()))
+        .andExpect(jsonPath("$.category").value(createResponse.category()));
     }
 
     @Test
@@ -105,19 +122,19 @@ public class ProductControllerTest {
     @Test
     public void shouldReturnProductWhenIdisNotNull() throws Exception {
         // Arrange
-        when(getProductById.execute(any())).thenReturn(response);
+        when(getProductById.execute(any())).thenReturn(getProductOutput);
 
         // Act and Assert
-        mockMvc.perform(MockMvcRequestBuilders.get(String.format("/product/%d",product.getId()))
+        mockMvc.perform(MockMvcRequestBuilders.get(String.format("/product/%d",1L))
                 .contentType(MediaType.APPLICATION_JSON)
                 .accept(MediaType.APPLICATION_JSON)
                 .characterEncoding(StandardCharsets.UTF_8))
         .andExpect(status().isOk())
-        .andExpect(jsonPath("$.id").value(response.id()))
-        .andExpect(jsonPath("$.name").value(response.name()))
-        .andExpect(jsonPath("$.price").value(response.price()))
-        .andExpect(jsonPath("$.description").value(response.description()))
-        .andExpect(jsonPath("$.category").value(response.category()));
+        .andExpect(jsonPath("$.id").value(getResponse.id()))
+        .andExpect(jsonPath("$.name").value(getResponse.name()))
+        .andExpect(jsonPath("$.price").value(getResponse.price()))
+        .andExpect(jsonPath("$.description").value(getResponse.description()))
+        .andExpect(jsonPath("$.category").value(getResponse.category()));
     }
 
     @Test
@@ -126,7 +143,7 @@ public class ProductControllerTest {
         when(getProductById.execute(any())).thenReturn(null);
 
         // Act and Assert
-        mockMvc.perform(MockMvcRequestBuilders.get(String.format("/product/%d",product.getId()))
+        mockMvc.perform(MockMvcRequestBuilders.get(String.format("/product/%d",1L))
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON)
                         .characterEncoding(StandardCharsets.UTF_8))
@@ -137,13 +154,13 @@ public class ProductControllerTest {
     @Test
     public void shouldReturnTenProductWithSuccess() throws Exception {
         //Arrange
-        List<ProductResponse> productList = IntStream.range(0, 10)
-                .mapToObj(i -> new ProductResponse((long) i, "Book " + i, BigDecimal.valueOf(10 + i), "A new book " + i, "BOOKS", "AVAILABLE", LocalDate.now()))
-                .collect(Collectors.toList());
+         List<GetProductOutput> productList = (IntStream.range(0, 10)
+                .mapToObj(i -> new GetProductOutput(ProductId.generate().getValue(), "Book " + i, BigDecimal.valueOf(10 + i), "A new book " + i, "BOOKS", "AVAILABLE", LocalDate.now()))
+                .toList());
 
-        PaginatedResponse<ProductResponse> paginatedResponse = new PaginatedResponse<>(productList, 1, false);
+        PaginatedResponse<GetProductOutput> paginatedResponse = new PaginatedResponse<>(productList, 0, false);
 
-        when(getProductsByNameAndDescription.execute(any(),any(),any())).thenReturn(paginatedResponse);
+        when(getProductsByNameAndDescription.execute(any())).thenReturn(paginatedResponse);
 
         // Act and Assert
         mockMvc.perform(MockMvcRequestBuilders.get("/product/get-products?name=Book&description=new%book&page=0&size=10&sort=name")
@@ -157,9 +174,9 @@ public class ProductControllerTest {
     @Test
     public void shouldReturnEmptyListWhenNoProductsExist() throws Exception {
         //Arrange
-        PaginatedResponse<ProductResponse> emptyResponse = new PaginatedResponse<>(null, 0, false);
+        PaginatedResponse<GetProductOutput> paginatedResponse = new PaginatedResponse<>(null, 0, false);
 
-        when(getProductsByNameAndDescription.execute(any(), any(), any())).thenReturn(emptyResponse);
+        when(getProductsByNameAndDescription.execute(any())).thenReturn(paginatedResponse);
 
         // Act and Assert
         mockMvc.perform(MockMvcRequestBuilders.get("/product/get-products?name=Book&description=new%book&page=0&size=10&sort=name")
